test/cases/compile_errors/missing_function_name.zig
fn () void {}

// error
//
// :1:1: error: missing function name
